Fix notifications overlapping navbar

--- a/internal/static/css/notification.css
+++ b/internal/static/css/notification.css
@@ -1,9 +1,7 @@
 div#notification-container {
   max-width: 50vw;
   position: fixed;
-  top: 0.1rem;
   right: 0.1rem;
-  padding-top: var(--navbar-height);
 }
 
 div.notification {
